src/components/Categories/ShoppingCart/ShoppingCart.css
.header {
  display: flex;
  padding-bottom: 20px;
  border: none;
}

.header > button {
  font-family: "Dongle", sans-serif;
  font-size: x-large;
  background-color: rgb(44, 182, 44);
  border: none;
  border-radius: 7px;
  width: 150px;
  height: 50px;
}

.header > button:hover {
  transform: scale(1.01);
  transition: 0.3s;
  cursor: pointer;
}

.info-box{
  width: 80%;
  justify-content: space-between;
  display: flex;
  border-bottom: 1px solid rgb(226, 226, 226);
}

.info-box > .info-box-right{
  display: flex;
  width: 220px;
  align-items: flex-start;
}

.info-box-right > .product-count{
  width: 80px;
  text-align: center
}

.info-box-right > .product-price{
  width: 60px;
  text-align: center
}

.productsinCart {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.productinCart {
  border-bottom: 1px solid rgb(226, 226, 226);
  height: 50px;
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.product-body-left{
  height: 100%;
}

.product-title{
  height: 100%;
  margin: 0px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.product-body-right > .product-cart-info{
  display: flex;
}

.product-body-right > .product-cart-info > .product-count{
  margin: 0px;
  width: 80px;
  text-align: center;
}


.product-body-right > .product-cart-info > .product-price{
  margin: 0px;
  width: 60px;
  text-align: center;
}

.product-body-right{
  display: flex;
  width: 220px;
  align-items: center;
  justify-content: space-between;
}

